2022-09-13T01:53:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041820423
* notice: last 14d: unq all: 3 18
* notice: prev accum: outdated-unq outdated-all / unq all: 174 332 / 185 348
* notice: next accum: outdated-unq outdated-all / unq all: 174 332 / 185 350
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-12]

2022-09-12T16:26:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038930359
* notice: last 14d: unq all: 3 16
* notice: prev accum: outdated-unq outdated-all / unq all: 173 331 / 185 348
* notice: next accum: outdated-unq outdated-all / unq all: 174 332 / 185 348
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-29] / []

2022-09-12T08:23:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035728923
* notice: last 14d: unq all: 3 17
* notice: prev accum: outdated-unq outdated-all / unq all: 173 331 / 184 347
* notice: next accum: outdated-unq outdated-all / unq all: 173 331 / 185 348
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-12]

2022-09-12T01:56:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3034186988
* notice: last 14d: unq all: 3 16
* notice: prev accum: outdated-unq outdated-all / unq all: 172 329 / 184 345
* notice: next accum: outdated-unq outdated-all / unq all: 173 331 / 184 347
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-08-28] / [2022-09-11]

2022-09-11T08:19:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031099998