@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-13T01:53:29Z",
+  "timestamp" : "2022-09-13T08:22:11Z",
   "count_outdated" : 332,
   "uniques_outdated" : 174,
-  "count" : 350,
-  "uniques" : 185,
+  "count" : 351,
+  "uniques" : 186,
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
