@@ -1,3 +1,11 @@
+2022-09-13T08:22:11Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043467629
+* notice: last 14d: unq all: 3 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 174 332 / 185 350
+* notice: next accum: outdated-unq outdated-all / unq all: 174 332 / 186 351
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-13]
+
 2022-09-13T01:53:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041820423
 * notice: last 14d: unq all: 3 18
